# swival

./: .gitmodules  ChangeLog.md  Makefile  README.md  build.py  pyproject.toml
.github/workflows/: test.yml  zizmor.yml
docs/: customization.md  getting-started.md  index.html  reports.md  safety-and-sandboxing.md  sitemap.xml  tools.md  usage.md
docs.md/: a2a.md  agentfs.md  audit.md  command-middleware.md  context-management.md  custom-commands.md  customization.md  getting-started.md  library.md  lifecycle-hooks.md  llm-filter.md  mcp.md  open-models.md  providers.md  python-api.md  reports.md  reviews.md  safety-and-sandboxing.md  secrets.md  skills.md  tools.md  usage.md  web-browsing.md
docs/css/: style.css
docs/js/: site.js
docs/pages/: a2a.html  acp.html  agentfs.html  audit.html  command-middleware.html  context-management.html  custom-commands.html  customization.html  getting-started.html  goal.html  index.html  library.html  lifecycle-hooks.html  llm-filter.html  mcp.html  metaskills.html  nono.html  open-models.html  providers.html  python-api.html  reports.html  reviews.html  safety-and-sandboxing.html  secrets.html  skills.html  tools.html  usage.html  web-browsing.html
scripts/: generate_formula.py
swival/: __init__.py  _msg.py  a2a_client.py  a2a_server.py  a2a_types.py  acp_server.py  agent.py  audit.py  audit_ui.py  cache.py  command_middleware.py  command_policy.py  completer.py  config.py  continue_here.py  edit.py  fetch.py  filter.py  fmt.py  goal.py  input_commands.py  input_dispatch.py  lifecycle.py  mcp_client.py  memory.py  onboarding.py  outline.py  prune.py  repair.py  repl_commands.py  report.py  reviewer.py  sandbox.py  sandbox_nono.py  secrets.py  session.py  skills.py  skills_cli.py  snapshot.py  subagent.py  (+8 more)
tests/: conftest.py  test_a2a_client.py  test_a2a_server.py  test_a2a_types.py  test_acp_server.py  test_add_dir.py  test_agent_events.py  test_allow_dir.py  test_audit_command.py  test_audit_ui.py  test_cache.py  test_checksum.py  test_command_middleware.py  test_command_policy.py  test_command_provider.py  test_compact.py  test_completer.py  test_config.py  test_continue_here.py  test_custom_commands.py  test_delete.py  test_edit.py  test_empty_assistant.py  test_fetch.py  test_files_option.py  test_fmt.py  test_goal_loop.py  test_guardrails.py  test_history.py  test_input_dispatch.py  test_instructions.py  test_interaction_policy.py  test_large_output_preview.py  test_list_grep.py  test_llm_filter.py  test_logging.py  test_marquee.py  test_mcp.py  test_memory.py  test_memory_parser.py  (+42 more)
