[project]
name = "swival"
version = "0.1.7"
description = "A small, powerful CLI coding agent for open AI models"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [
    { name = "Frank Denis", email = "github@pureftpd.org" },
]
keywords = ["ai", "agent", "cli", "llm", "coding", "tool-calling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "litellm",
    "tiktoken>=0.12.0",
    "html-to-markdown",
    "rich",
    "prompt-toolkit>=3.0.52",
]

[project.urls]
Homepage = "https://swival.github.io/swival/"
Repository = "https://github.com/swival/swival"
Issues = "https://github.com/swival/swival/issues"

[project.scripts]
swival = "swival.agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["swival"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.2",
]
website = [
    "markdown",
    "pillow",
]
