[project]
name = "swival"
version = "0.1.31"
description = "A small, powerful CLI coding agent for open AI models"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [
    { name = "Frank Denis", email = "github@pureftpd.org" },
]
keywords = ["ai", "agent", "cli", "llm", "coding", "tool-calling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "litellm>=1.82",
    "tiktoken>=0.12",
    "html-to-markdown>=2.28",
    "rich>=14.3",
    "prompt-toolkit>=3.0.52",
    "mcp>=1.26,<2",
    "rank-bm25>=0.2.2",
    "httpx>=0.28.1",
    "starlette>=0.52.1",
    "uvicorn>=0.41.0",
    "fast-cipher>=0.1.1",
]

[project.urls]
Homepage = "https://swival.dev/"
Repository = "https://github.com/swival/swival"
Issues = "https://github.com/swival/swival/issues"

[project.scripts]
swival = "swival.agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["swival"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0",
    "ruff>=0.15",
]
website = [
    "markdown",
    "pillow",
]
