[project]
name = "swival"
version = "1.0.2"
description = "A small, powerful CLI coding agent for open AI models"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [
    { name = "Frank Denis", email = "github@pureftpd.org" },
]
keywords = ["ai", "agent", "cli", "llm", "coding", "tool-calling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "litellm==1.83.8",
    "tiktoken>=0.12",
    "html-to-markdown>=3.1.0,<3.2",
    "rich>=15.0.0",
    "prompt-toolkit>=3.0.52",
    "mcp>=1.27,<2",
    "rank-bm25>=0.2.2",
    "httpx>=0.28.1",
    "starlette>=1.0.0",
    "uvicorn>=0.44.0",
    "fast-cipher>=0.2.1",
    "boto3>=1.42.89",
]

[project.urls]
Homepage = "https://swival.dev/"
Repository = "https://github.com/swival/swival"
Issues = "https://github.com/swival/swival/issues"

[project.scripts]
swival = "swival.agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "swival/",
    "tests/",
    "pyproject.toml",
    "README.md",
    "LICENSE",
    "ChangeLog.md",
]
exclude = [
    "homebrew-tap/",
]

[tool.hatch.build.targets.wheel]
packages = ["swival"]

[tool.uv]
package = true
constraint-dependencies = ["requests>=2.33.1", "cryptography>=46.0.7"]
override-dependencies = ["aiohttp>=3.13.4"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]
website = [
    "markdown",
    "pillow",
]
